# tf-layers

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: rust.yml
benches/: benchmarks.rs
src/: activations.rs  average_pooling.rs  batch_normalization.rs  conv1d.rs  dense.rs  dropout.rs  embedding.rs  lib.rs  max_pooling.rs  padding.rs
